[gd_scene load_steps=28 format=2]

[ext_resource path="res://Oyuncu/Oyuncu.gd" type="Script" id=1]
[ext_resource path="res://Oyuncu/İmleç.png" type="Texture" id=2]
[ext_resource path="res://Oyuncu/El.png" type="Texture" id=3]
[ext_resource path="res://Oyuncu/KGövdeDYK.png" type="Texture" id=4]
[ext_resource path="res://Oyuncu/kKafaDYK.png" type="Texture" id=5]
[ext_resource path="res://Gölge.png" type="Texture" id=6]
[ext_resource path="res://Joystick/virtual_joystick.tscn" type="PackedScene" id=7]
[ext_resource path="res://Blok/Kapı/Kapı.png" type="Texture" id=8]
[ext_resource path="res://Blok/Duvar/Duvaricon.png" type="Texture" id=9]
[ext_resource path="res://Blok/Camlı Duvar/CamlıDuvaricon.png" type="Texture" id=10]
[ext_resource path="res://Blok/Çatı/Çatıicon.png" type="Texture" id=11]
[ext_resource path="res://Blok/Tahta_Zemin_icon.png" type="Texture" id=12]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.984127, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.730469, 0.627747, 0.627747, 0.313726, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.209375, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.46319 ), 0.0320521, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
scale = 4.0
scale_random = 0.5
scale_curve = SubResource( 16 )
color_ramp = SubResource( 14 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 4.0

[sub_resource type="Animation" id=2]
resource_name = "Durus"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cevir/KKafaDyk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cevir/KgövdeDyk:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cevir/SagEl:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6, -3 ), Vector2( -6, -3 ), Vector2( -7, -4 ), Vector2( -8, -4 ), Vector2( -6, -3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cevir/SolEl:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, -3 ), Vector2( 6, -3 ), Vector2( 7, -4 ), Vector2( 8, -3 ), Vector2( 6, -3 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cevir/KKafaDyk:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cevir/KgövdeDyk:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cevir/SagEl:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, -3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cevir/SolEl:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Yurume"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cevir/KKafaDyk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cevir/KgövdeDyk:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cevir/SolEl:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -5 ), Vector2( 5, -3 ), Vector2( 6, -3 ), Vector2( 7, -2 ), Vector2( 6, -2 ), Vector2( 5, -4 ), Vector2( 4, -5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cevir/SagEl:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -2 ), Vector2( -5, -3 ), Vector2( -6, -4 ), Vector2( -7, -2 ), Vector2( -6, -3 ), Vector2( -4, -3 ), Vector2( -2, -2 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "OltaAtma"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../DoluEl/Cevir/AnimasyonO:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35 ),
"transitions": PoolRealArray( -2, 1, 2, 1 ),
"update": 0,
"values": [ 0.0, -135.0, -135.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../DoluEl/Cevir/AnimasyonO:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.35 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -5, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../DoluEl/Cevir/AnimasyonO:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../DoluEl/Cevir/AnimasyonO:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../DoluEl/Cevir/AnimasyonO:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Sulama"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../DoluEl/Cevir/AnimasyonO:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.3 ),
"transitions": PoolRealArray( -2, 0.318, 2, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 60.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../DoluEl/Cevir/AnimasyonO:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.2, 0.3 ),
"transitions": PoolRealArray( -2, 2, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, -8 ), Vector2( 5, -8 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Vurma"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../DoluEl/Cevir/AnimasyonO:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.3 ),
"transitions": PoolRealArray( -2, 0.318, 2, 1 ),
"update": 0,
"values": [ 0.0, -140.0, 90.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("imlec:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "İmlec"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("imlec:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 2, -2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="Oyuncu" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="YurumeEfek" type="Particles2D" parent="."]
position = Vector2( 0, 2 )
emitting = false
amount = 4
fixed_fps = 60
local_coords = false
process_material = SubResource( 17 )

[node name="CekicKoyulcakYapi" type="Position2D" parent="."]
visible = false
z_index = 5

[node name="CamliDuvaricon" type="Sprite" parent="CekicKoyulcakYapi"]
visible = false
modulate = Color( 1, 1, 1, 0.470588 )
self_modulate = Color( 0, 1, 0, 1 )
position = Vector2( 0, -16 )
texture = ExtResource( 10 )

[node name="Duvaricon" type="Sprite" parent="CekicKoyulcakYapi"]
visible = false
modulate = Color( 1, 1, 1, 0.470588 )
self_modulate = Color( 0, 1, 0, 1 )
position = Vector2( 0, -16 )
texture = ExtResource( 9 )

[node name="Catiicon" type="Sprite" parent="CekicKoyulcakYapi"]
visible = false
modulate = Color( 1, 1, 1, 0.470588 )
self_modulate = Color( 0, 1, 0, 1 )
texture = ExtResource( 11 )

[node name="Kapi" type="Sprite" parent="CekicKoyulcakYapi"]
visible = false
modulate = Color( 1, 1, 1, 0.470588 )
self_modulate = Color( 0, 1, 0, 1 )
position = Vector2( 0, -14 )
texture = ExtResource( 8 )

[node name="TahtaZeminIcon" type="Sprite" parent="CekicKoyulcakYapi"]
visible = false
modulate = Color( 1, 1, 1, 0.470588 )
self_modulate = Color( 0, 1, 0, 1 )
texture = ExtResource( 12 )

[node name="imlec" type="Sprite" parent="."]
z_index = 5
texture = ExtResource( 2 )

[node name="Cevir" type="Node2D" parent="."]

[node name="Gölge" type="Sprite" parent="Cevir"]
position = Vector2( 0, 2.8125 )
scale = Vector2( 0.511719, 0.261719 )
texture = ExtResource( 6 )

[node name="SolEl" type="Sprite" parent="Cevir"]
position = Vector2( 6, -3 )
texture = ExtResource( 3 )

[node name="KKafaDyk" type="Sprite" parent="Cevir"]
position = Vector2( 0, -13 )
texture = ExtResource( 5 )
hframes = 6
vframes = 3

[node name="KgövdeDyk" type="Sprite" parent="Cevir"]
position = Vector2( 0, -3 )
texture = ExtResource( 4 )
offset = Vector2( 0, -10 )
hframes = 6
vframes = 3

[node name="SagEl" type="Sprite" parent="Cevir"]
position = Vector2( -6, -3 )
texture = ExtResource( 3 )

[node name="DoluEl" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -4 )

[node name="EsyaVurmaYer" type="Position2D" parent="DoluEl"]
position = Vector2( 17, 0 )

[node name="Cevir" type="Position2D" parent="DoluEl"]

[node name="AnimasyonO" type="YSort" parent="DoluEl/Cevir"]

[node name="El" type="Sprite" parent="DoluEl/Cevir/AnimasyonO"]
position = Vector2( -2, -0.01 )
rotation = 0.785398
texture = ExtResource( 3 )

[node name="EI" type="Sprite" parent="DoluEl/Cevir/AnimasyonO"]
position = Vector2( 2, 1.1 )
rotation = 0.785398
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="VucutAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Durus = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Yurume = SubResource( 4 )

[node name="VurmaAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../VucutAnimationPlayer")
anims/OltaAtma = SubResource( 18 )
anims/RESET = SubResource( 5 )
anims/Sulama = SubResource( 7 )
anims/Vurma = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "İmlec"
anims/RESET = SubResource( 8 )
"anims/İmlec" = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true

[node name="TimerVurma" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="TimerOlta" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AndroidUI" type="CanvasLayer" parent="."]
visible = false

[node name="YurumeDokunmatikTus" parent="AndroidUI" instance=ExtResource( 7 )]
margin_left = 32.0
margin_top = -136.0
margin_right = 240.0
margin_bottom = 72.0

[node name="YonDokunmatikTus" parent="AndroidUI" instance=ExtResource( 7 )]
margin_left = 432.0
margin_top = -136.0
margin_right = 640.0
margin_bottom = 72.0

[connection signal="timeout" from="TimerVurma" to="." method="_on_TimerVurma_timeout"]
[connection signal="timeout" from="TimerOlta" to="." method="_on_TimerOlta_timeout"]
